--- a/src/index.html
+++ b/src/index.html
@@ -22,3 +22,13 @@
 
     <title>roadmap - Image Grid Layout</title>
 </head>
+<body>
+    <main>
+        <img src="assets/img/jasper-gribble-beach.jpg" alt="A foggy beach with a large rock formation in the foreground" class="grid-imgs">
+        <img src="assets/img/pawel-czerwinski-room.jpg" alt="A living room with a white couch and a round window" class="grid-imgs">
+        <img src="assets/img/stefan-vladimirov-table.jpg" alt="A table topped with plates and bowls of food" class="grid-imgs">
+        <img src="assets/img/bernhard-building.jpg" alt="A building with a red door and a tree in front of it" class="grid-imgs">
+        <img src="assets/img/florian-schmid-row.jpg" alt="A row of white apartment buildings next to a street" class="grid-imgs">
+        <img src="assets/img/ian-schneider-view.jpg" alt="A view of a beach from the top of a hill" class="grid-imgs">
+    </main>
+</body>
